# servicedesk_new

./: README.md  package-lock.json  package.json
backend/: .env  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_initial_tables.py  001_initial.py
backend/app/: auth.py  crud.py  main.py  models.py  schemas.py
backend/app/core/: config.py  init_db.py  security.py
backend/app/routes/: __init__.py  auth.py  notifications.py  sla.py  tasks.py  tickets.py
src/: App.tsx
src/api/: client.ts
src/components/: CreateTicketForm.tsx  TicketList.tsx
src/components/auth/: LoginForm.tsx  RegisterForm.tsx
src/components/dashboard/: GlobalDashboard.tsx  RecentActivities.tsx  SLAStatus.tsx  TaskMetrics.tsx  TeamWorkload.tsx
src/components/layout/: PrivateRoute.tsx
src/components/notifications/: NotificationCenter.tsx
src/components/request/: RequestDetails.tsx  SLAIndicator.tsx
src/components/task/: TaskBoard.tsx  TaskFilters.tsx  TaskList.tsx
src/components/ticket/: CommentForm.tsx  CommentList.tsx  TicketDetails.tsx  TicketFilters.tsx  TicketHistory.tsx
src/pages/: Dashboard.tsx  TaskPage.tsx  TicketPage.tsx
src/store/: authStore.ts  requestStore.ts  slaStore.ts  taskStore.ts
src/types/: comment.ts  request.ts  task.ts  ticket.ts  user.ts
